[FIX] Fixing windows behaviour with error in the ingestion of passwords.txt